2015-07-15  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Some pull plotting functionality

2015-07-08  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Calculate and print G.o.f.
	
	* Write some meta info to results

	* Read limits, fixed params from single textfile --limits

	* Output files steered by --output
	
	* Remove now obsolete bin/prof-interpolate
	

2015-07-08  Holger Schulz  <holger.schulz@durham.ac.uk>

	* First working version of prof-tune (pyminuit, simpleGOF)

	* Multiprocessing to speed up prof-ipol (--multi)

	* prof-ipol-tabulated to write out interpolation of tabulated data
	
	* Minor bugfixes


2015-06-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding mean and median strategies for assigning constant ipol bin errors.

2015-06-03  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a Bin base class in the Python side, and a coherent handling of multiple (interpolated) bin errors.

	* Various tweaks and minor fixes.

2015-05-10  Andy Buckley  <andy.buckley@cern.ch>

	* Add 'Minuit' class importing to the __init__.py file.

2015-05-05  Andy Buckley  <andy.buckley@cern.ch>

	* Rewrite C++ ipolstring parsing using STL string functions rather than Boost: shorter! Boost dependency GONE :-)

	* Replace boost::tuple with std::pair and clean up ParamPoints interface a bit.

	* Add a --veto option to prof-sample, for a user-specified vetoing function.

	* Move Sampler from prof-sample into professor2/__init__.py

2015-05-04  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a first version of prof-tune with ipol reading from file.

	* Adding options for (average) error interpolation and ipol persistency to prof-ipol and module functions.

2015-05-03  Andy Buckley  <andy.buckley@cern.ch>

	* Add bin/prof-ipol simple script using the functions below -- to be merged with prof-interpolate.

	* professor2/__init__.py: Add Histo, DataBin, IpolBin and basic data handling functions.

	* Remove unnecessary dlopen fiddling from professor2/__init__.py
